# newspeak

./: Cargo.toml  README.md  build.rs
proto/: newspeak.proto
src/: client.rs  local_store.rs  main.rs  pqxdh.rs  ratchet.rs  server.rs
src/tests/: local_store.rs  pqxdh.rs  ratchet.rs  server.rs
