[package]
name = "newspeak"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
hex = "0.4.3"
ml-kem = "0.2.1"
rand = "0.8"
sha3 = "0.10.8"
blake3 = "1"
x25519-dalek = { version = "2", features = ["reusable_secrets", "static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10.1"
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tonic-prost = "0.14.2"
tokio-rusqlite = "0.7.0"

[build-dependencies]
tonic-prost-build = "0.14.2"

[[bin]]
name = "server"
path = "src/server.rs"
